a1/brendan_gordon/TEST_PROGRAMS/invalidtype/justin_domingue/invalidtype-1.min
# Invalid 1

var a: int;

a = 1.0;  # cannot assign FLOAT to INT

